--- a/activity.html
+++ b/activity.html
@@ -5,16 +5,96 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/design.css">
     <script src="components/loader.js"></script>
     <script>
         //
         // TODO: Write JavaScript code here
         //
     </script>
+      <!-- ページのタイトル -->
+  <title>活動アーカイブ</title>
+
+  <!-- ページの説明 -->
+  <meta name="description" content="ボードゲーム愛好会ボドゲ部の活動アーカイブです。" />
+
+  <!-- 文字エンコードの指定 -->
+  <meta charset="utf-8" />
+
+  <!-- スマホに対応するためのViewPortの設定 -->
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- ホーム画面に追加したときのタイトル -->
+  <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部アーカイブ">
+
+  <!-- ホーム画面に追加したときの画像 -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+
+  <!-- サイトアイコンの指定 -->
+  <link rel="icon" type="image/jpg" href="d_nice.png">
+
+  <!-- 電話番号などをリンクに変換されるのを防ぐ -->
+  <meta name="format-detection" content="email=no,telephone=no,address=no" />
+
+  <link rel="stylesheet" href="./design.css" /> <!-- CSSファイルを読み込む -->
 </head>
 <body>
     <!-- TODO: Please edit here -->
-    <div class="heading">過去の活動の様子
+     <div class="contents-wrapper">
+         <a href="index.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+      <div class="heading"><i>　　活動アーカイブ　　</i></div>
+      <div class="contents-wrapper-inner">
+          
+        <div class="content-left">
+           
+          <div class="face-photo">
+<div class="pop-box2">
+  <label for="popup-on2"><label for="popup-on2"><div class="btn-open2"><img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="" width="400" height="300"class="layer-img2"></div></label>
+  <input type="checkbox" id="popup-on2">
+  <div class="popup2">
+    <label for="popup-on2" class="icon-close2">×</label>
+    <div class="popup-content2">
+       <!-- ポップアップの中身 -->
+       <b>2021年5月22日　オンライン説明会を追加開催</b><br>
+       対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。
+      <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img2">
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on2"><div class="btn-close2">閉じる</div></label>
+  </div>
+
+<div class="pop-box1">
+  <label for="popup-on1"><label for="popup-on1"><div class="btn-open1"><img src="https://pbs.twimg.com/media/Ey-bo45UUAM8R6Z?format=jpg&name=medium" alt="" width="400" height="300"class="layer-img1"></div></label>
+  <input type="checkbox" id="popup-on1">
+  <div class="popup1">
+    <label for="popup-on1" class="icon-close1">×</label>
+    <div class="popup-content1">
+       <!-- ポップアップの中身 -->
+       <b>2021年4月16日　新歓2回目、キャット&チョコレート祭り</b><br>
+       いろんな種類のキャッチョコで戦いました！優勝した方に「光る海の仲間たち」（ドンキホーテで購入）を贈呈しました。
+      <img src="https://pbs.twimg.com/media/EzGfJF5UcAUXLS3?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img">
+      <img src="https://pbs.twimg.com/media/EzGfJF4VoAAibYq?format=jpg&name=medium" alt="キャッチョコ" width="514" height="386"class="layer-img">
+       <img src="https://pbs.twimg.com/media/EzGfJF2VgAMOdJq?format=jpg&name=900x900" alt="キャッチョコ" width="514" height="386"class="layer-img">
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on1"><div class="btn-close1">閉じる</div></label>
+  </div>    
+   
+
+<div class="pop-box">
+  <label for="popup-on"><label for="popup-on"><div class="btn-open"><img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="400" height="300"class="layer-img"></div></label>
+  <input type="checkbox" id="popup-on">
+  <div class="popup">
+    <label for="popup-on" class="icon-close">×</label>
+    <div class="popup-content">
+       <!-- ポップアップの中身 -->
+       <b>2021年4月9日、10日　新歓オンライン説明会開催</b><br>
+       両日合わせて100名程度の方にご参加いただきました。ありがとうございました！
+      <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="514" height="386"class="layer-img">
+        <!-- ./ポップアップの中身　ここまで -->
+    </div>
+    <label for="popup-on"><div class="btn-close">閉じる</div></label>
+  </div>
+
 </body>
 </html>
