--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <div class="nav-wrapper">
       <div class="nav">
-        <div class="nav-content"><div class="nav-icon"></div><a href="activity.html" >🚀活動アーカイブ</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このサイトについて</a></div>
       </div>
     </div>
