--- a/about.html
+++ b/about.html
@@ -6,7 +6,20 @@
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
     <script src="components/loader.js"></script>
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="css/about.css">
+
+      <!-- ホーム画面に追加したときの画像 -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+
+  <!-- サイトアイコンの指定 -->
+  <link rel="icon" type="image/jpg" href="d_nice.png">
+
+  <!-- 電話番号などをリンクに変換されるのを防ぐ -->
+  <meta name="format-detection" content="email=no,telephone=no,address=no" />
+
+  <link rel="stylesheet" href="./about.css" /> <!-- CSSファイルを読み込む -->
+
+
     <script>
         //
         // TODO: Write JavaScript code here
