--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta property="og:url" content="https://mogjif.github.io/github.io/" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
-  <meta property="og:image" content="IMG_6074.jpg" />
+  <meta property="og:image" content="d_nice.png" />
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部">
@@ -40,7 +40,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="IMG_6074.jpg">
+  <link rel="icon" type="image/jpg" href="d_nice.png">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
@@ -51,7 +51,7 @@
 <body>
     <div class="nav-wrapper">
       <div class="nav">
-        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="activity.html" >🚀活動アーカイブ</a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このサイトについて</a></div>
       </div>
     </div>
