Update and rename index.html to home.html

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <meta charset="utf-8" />
 
   <!-- URLを正規化(統一化)する -->
-  <link rel="canonical" href="https://mogjif.github.io/github.io/" />
+  <link rel="canonical" href="https://bodoge-bu.github.io/github.io/" />
 
   <!-- スマホに対応するためのViewPortの設定 -->
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -28,7 +28,7 @@
   <!-- OGP(SNSでの表示)の各種設定 -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@bodogebu_" />
-  <meta property="og:url" content="https://mogjif.github.io/github.io/" />
+  <meta property="og:url" content="https://bodoge-bu.github.io/github.io/" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
   <meta property="og:image" content="d_nice.png" />
@@ -51,7 +51,7 @@
 <body>
     <div class="nav-wrapper">
       <div class="nav">
-        <div class="nav-content"><div class="nav-icon"></div><a href="activity.html" >🚀活動アーカイブ</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このサイトについて</a></div>
       </div>
     </div>
