--- a/archive.html
+++ b/archive.html
@@ -31,7 +31,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
   <!-- サイトアイコンの指定 -->
-  <link rel="icon" type="image/jpg" href="d_nice.png">
+  <link rel="icon" type="image/jpg" href="d_smile.png">
 
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
@@ -41,7 +41,7 @@
 <body>
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
-         <a href="index.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+         <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
       <div class="heading"><i>　　活動アーカイブ　　</i></div>
       <div class="contents-wrapper-inner">
           
