--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body>
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
-        <a href="index.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+        <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
       <div class="heading"><i>　　このwebページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
