--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body>
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
-        <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+        <a href= "home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
       <div class="heading"><i>　　このwebページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
@@ -38,8 +38,8 @@
         このwebページはボードゲーム愛好会の部員によって運営されています。</br>
         何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br>
         </br>
-        作成日：2021年5月21日</br>
-        最終更新：21.5.22</div>
+        作成日：21.5.21</br>
+        最終更新：21.5.25</div>
         <div class="nav-content"><div class="nav-icon"></div></div>
     
     <div class="profile-english">
