--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 <body>
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
-        <a href= "home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+        <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
       <div class="heading"><i>　　このwebページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
@@ -38,8 +38,16 @@
         このwebページはボードゲーム愛好会の部員によって運営されています。</br>
         何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br>
         </br>
-        作成日：21.5.21</br>
-        最終更新：21.5.25</div>
+
+
+        <small>作成日：21.5.22</br>
+        最終更新：21.5.25
+        </br></br></br>
+        HP作成時の参考文献</br>
+        ・<a href="http://abehiroshi.la.coocan.jp/" >阿部寛のホームページ</a></br>
+        ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" >阿部寛と学ぶHTMLチュートリアル</a></br>
+        ・<a href="https://homepagenopro.com/html/css_popup.html" >Cssだけで実装!画像をクリックしてポップアップ表示する方法</a></br></small>
+        </div>
         <div class="nav-content"><div class="nav-icon"></div></div>
     
     <div class="profile-english">
