--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
   <meta property="og:url" content="https://bodoge-bu.github.io/github.io/" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
-  <meta property="og:image" content="d_nice.png" />
+  <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部">
