--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
   <link rel="canonical" href="https://bodoge-bu.github.io/github.io/" />
 
   <!-- スマホに対応するためのViewPortの設定 -->
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
 
   <!-- OGP(SNSでの表示)の各種設定 -->
   <meta name="twitter:card" content="summary_large_image" />
