--- a/archive.html
+++ b/archive.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8" />
 
   <!-- スマホに対応するためのViewPortの設定 -->
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部アーカイブ">
