--- a/about.html
+++ b/about.html
@@ -11,6 +11,9 @@
       <!-- ホーム画面に追加したときの画像 -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
+   <!-- スマホに対応するためのViewPortの設定 -->
+  <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
+    
   <!-- サイトアイコンの指定 -->
   <link rel="icon" type="image/jpg" href="d_nice.png">
 
