--- a/home.html
+++ b/home.html
@@ -61,8 +61,12 @@
         <div class="content-left">
           <div class="face-photo"><img src="IMG_6074.jpg" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
-            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。<br/>
-            2018年から活動開始、今年度公認化されました。
+            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
+            <br/><br/>
+            活動場所：青山キャンパス17号館<br/>
+            活動日時：週2回、月曜と金曜の5限後から<br/>
+            部員数：2020年度 22名<br/>
+            　　　　2021年度 110名(←!?)
           </div>
           
           <div class="news-heading">★★★　各種SNS　★★★</div>
