--- a/about.html
+++ b/about.html
@@ -14,6 +14,14 @@
    <!-- スマホに対応するためのViewPortの設定 -->
   <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
     
+    <!-- OGP(SNSでの表示)の各種設定 -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@bodogebu_" />
+  <meta property="og:url" content="https://bodoge-bu.github.io/github.io/" />
+  <meta property="og:title" content="About" />
+  <meta property="og:description" content="このホームページについて" />
+  <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
+    
   <!-- サイトアイコンの指定 -->
   <link rel="icon" type="image/jpg" href="d_nice.png">
 
@@ -33,12 +41,12 @@
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
         <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
-      <div class="heading"><i>　　このwebページについて　　</i></div>
+      <div class="heading"><i>　　このホームページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
-        このwebページはボードゲーム愛好会の部員によって運営されています。</br>
+        このホームページはボードゲーム愛好会の部員によって運営されています。</br>
         何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br>
         </br>
 
