--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このサイトについて</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このHPについて</a></div>
       </div>
     </div>
     <div class="contents-wrapper">
