--- a/about.html
+++ b/about.html
@@ -8,6 +8,13 @@
     <script src="components/loader.js"></script>
     <link rel="stylesheet" href="css/about.css">
 
+    
+    <!-- ページのタイトル -->
+  <title>このHPについて</title>
+
+  <!-- ページの説明 -->
+  <meta name="description" content="このホームページはボードゲーム愛好会の部員によって運営されています。" />
+    
       <!-- ホーム画面に追加したときの画像 -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
 
@@ -52,7 +59,7 @@
 
 
         <small>作成日：21.5.22</br>
-        最終更新：21.5.25
+        最終更新：21.5.29
         </br></br></br>
         HP作成時の参考文献</br>
         ・<a href="http://abehiroshi.la.coocan.jp/" >阿部寛のホームページ</a></br>
