--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
     
     <!-- ページのタイトル -->
-  <title>このHPについて</title>
+  <title>このホームページについて</title>
 
   <!-- ページの説明 -->
   <meta name="description" content="このホームページはボードゲーム愛好会の部員によって運営されています。" />
