--- a/home.html
+++ b/home.html
@@ -33,6 +33,12 @@
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
   <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
 
+<!-- サムネイル画像のURLを指定します -->
+<meta name="twitter:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
+
+<!-- サムネイルを小さく表示する場合はSummary Cardを指定します -->
+<meta name="twitter:card" content="summary" />
+
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部">
 
