--- a/home.html
+++ b/home.html
@@ -26,18 +26,14 @@
   <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
 
   <!-- OGP(SNSでの表示)の各種設定 -->
-  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@bodogebu_" />
-  <meta property="og:url" content="https://bodoge-bu.github.io/github.io/" />
+  <meta name="twitter:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
+  <meta property="og:url" content="https://bodoge-bu.github.io/home.html" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
   <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
 
-<!-- サムネイル画像のURLを指定します -->
-<meta name="twitter:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
-
-<!-- サムネイルを小さく表示する場合はSummary Cardを指定します -->
-<meta name="twitter:card" content="summary" />
 
   <!-- ホーム画面に追加したときのタイトル -->
   <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部">
