--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
   <meta charset="utf-8" />
 
   <!-- URLを正規化(統一化)する -->
-  <link rel="canonical" href="https://bodoge-bu.github.io/github.io/" />
+  <link rel="canonical" href="https://bodoge-bu.github.io/github.io/home.html" />
 
   <!-- スマホに対応するためのViewPortの設定 -->
   <meta name="viewport" content="target-densitydpi=device-dpi, maximum-scale=1.0, user-scalable=yes">
@@ -29,7 +29,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@bodogebu_" />
   <meta name="twitter:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
-  <meta property="og:url" content="https://bodoge-bu.github.io/home.html" />
+  <meta property="og:url" content="https://bodoge-bu.github.io/github.io/home.html" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
   <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
