--- a/home.html
+++ b/home.html
@@ -82,9 +82,9 @@
         
         </div>
         <div class="content-right">
-           <span style="color:white">あなたは
-            <!--タグはここから--><big><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d486_f6_010/60b32cd5bd687/" alt="アクセスカウンター" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" ><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table></big><!--ここまで-->
-               人目のお客様です</span>
+           <b><span style="color:white">あなたは
+            <!--タグはここから--><table border="0" cellspacing="0" cellpadding="0"><tr><td align="center"><a href="http://www.rays-counter.com/"><img src="http://www.rays-counter.com/d486_f6_010/60b32cd5bd687/" alt="スマホでのみ表示可能" border="0"></a></td></tr><tr><td align="center"><img src="http://www.rays-counter.com/images/counter_01.gif" border="0"><img src="http://www.rays-counter.com/images/counter_02.gif" border="0"><img src="http://www.rays-counter.com/images/counter_03.gif" border="0"><img src="http://www.rays-counter.com/images/counter_04.gif" border="0" ><img src="http://www.rays-counter.com/images/counter_05.gif" border="0"></td></tr></table><!--ここまで-->
+               人目の訪問者です！</span></b>
           <div class="news-heading">★★★　最新情報　★★★</div>
           <div class="news-list">
             <div class="news-list-content">
