--- a/home.html
+++ b/home.html
@@ -60,8 +60,8 @@
     <div class="contents-wrapper">
       <div class="heading"><i>ボードゲーム愛好会 ボドゲ部（公認）</i></div>
         
-         <center><span style="color:white">　　　あなたは　<a href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/j/46/1622358033/" alt="アクセスカウンター"></a>
-        人目の訪問者です。</span></center></br>
+         <center><small><b><span style="color:white">　　　あなたは　<a href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/j/46/1622358033/" alt="アクセスカウンター"></a>
+        人目の訪問者です。</span></b></small></center></br>
         
       <div class="contents-wrapper-inner">
         <div class="content-left">
