--- a/home.html
+++ b/home.html
@@ -69,9 +69,9 @@
           <div class="profile">
             青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><br/>
-            活動場所：青山キャンパス17号館<br/>
-            活動日時：週2回、月曜と金曜の5限後から<br/>
-            部員数：2020年度 22名<br/>
+            <b>活動場所</b>　青山キャンパス17号館<br/>
+            <b>活動日時</b>　週2回、月曜と金曜の5限後から<br/>
+            <b>部員数</b>　2020年度 22名<br/>
             　　　　2021年度 110名(←!?)
           </div>
           
