--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <body>
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
-        <a href="home.html" ><font color="white">◀︎ボドゲ部Home</font></a>
+        <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　このホームページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
