--- a/home.html
+++ b/home.html
@@ -28,11 +28,11 @@
   <!-- OGP(SNSでの表示)の各種設定 -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@bodogebu_" />
-  <meta name="twitter:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
+  <meta name="twitter:image" content="https://bodoge-bu.github.io/github.io/d_smile.png" />
   <meta property="og:url" content="https://bodoge-bu.github.io/github.io/home.html" />
   <meta property="og:title" content="ボードゲーム愛好会 ボドゲ部" />
   <meta property="og:description" content="ボードゲーム愛好会の公式ホームページです。" />
-  <meta property="og:image" content="https://pbs.twimg.com/media/EzQP_QiUcAUPsoF?format=jpg&name=large" />
+  <meta property="og:image" content="https://bodoge-bu.github.io/github.io/d_smile.png" />
 
 
   <!-- ホーム画面に追加したときのタイトル -->
