--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
 
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: content: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <script src="components/loader.js"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style1.css">
     <script>
     </script>
 
@@ -47,7 +47,7 @@
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
 
-  <link rel="stylesheet" href="./style.css" /> <!-- CSSファイルを読み込む -->
+  <link rel="stylesheet" href="./style1.css" /> <!-- CSSファイルを読み込む -->
 </head>
 
 <body>
