--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
         <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" >🛸幹部紹介</a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >💣このHPについて</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >🌐このHPについて</a></div>
       </div>
     </div>
     <div class="contents-wrapper">
@@ -87,7 +87,7 @@
             　<a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
              <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br><span style="color:white">　最終更新：2021年5月29日</span>　　<img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
+              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br><span style="color:white">　</span>　　<img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
         
