--- a/archive.html
+++ b/archive.html
@@ -56,7 +56,7 @@
     <div class="popup-content2">
        <!-- ポップアップの中身 -->
        <b>2021年5月22日　オンライン説明会を追加開催</b><br>
-       対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。
+       対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。</br>
       <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img2">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
