--- a/aboutus.html
+++ b/aboutus.html
@@ -54,7 +54,7 @@
            
           <div class="face-photo">
 
-        <img src=" irasutoya.png" alt="アイコン" width="230" height="200"class="layer-img"></div>
+        <img src=" https://bodoge-bu.github.io/github.io/irasutoya.PNG" alt="アイコン" width="230" height="200"class="layer-img"></div>
 
          <div class="profile">
             <big><b>代表　</b>
