--- a/aboutus.html
+++ b/aboutus.html
@@ -46,7 +46,7 @@
 <body>
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
-         <a href="index.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　2021年度 幹部紹介　　</i></div>
       <div class="contents-wrapper-inner">
           
@@ -54,7 +54,7 @@
            
           <div class="face-photo">
 
-        <img src=" https://bodoge-bu.github.io/github.io/irasutoya.PNG" alt="アイコン" width="230" height="200"class="layer-img"></div>
+        <img src=" https://bodoge-bu.github.io/github.io/irasutoya.png" alt="アイコン" width="230" height="200"class="layer-img"></div>
 
          <div class="profile">
             <big><b>代表　</b>
