--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、神奈川県生まれ。ものづくりと収集が趣味で、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。最近、アサガオの観察日記をつけ始めた。今行きたい場所はお城と滝と海。自室の扉に貼られている紙の枚数は8枚（半紙2枚、普通紙6枚）。</big>
+            2000年、神奈川県生まれ。ものづくりと収集を趣味にしており、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。今行きたい場所はお城と滝と海。自室の扉に貼られている紙の枚数は8枚（半紙2枚、普通紙6枚）。</big>
           </div>
           </div>
 <div class="content-left3">
