--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
            
           <div class="face-photo">
 
-        <img src=" https://bodoge-bu.github.io/github.io/nice.png" alt="アイコン" width="230" height="200"class="layer-img"></div>
+        <img src=" https://bodoge-bu.github.io/github.io/d_smile.png" alt="アイコン" width="200" height="200"class="layer-img"></div>
 
          <div class="profile4">
             <big><b>出目 良郎　</b>
