--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
              <a href="https://twitter.com/HOHOHO_HO_HO_H"><small>@HOHOHO_HO_HO_H</small></a>
             
             <br/>
-            2000年8月、香川県にてうどんを愛することを宿命として爆誕。骨格で青山学院に入学したという噂がある。趣味は「それどこでみつけてきたの？」と言われること、最近は暑いのでコーヒーも嗜んでいる。好きなボードゲームはパンデミック、サイズなどの重ゲー。そのうち幹部を引っ張って大会に出たいと考えている。</big>
+            2000年8月、香川県にてうどんを愛することを宿命として爆誕。骨格で青山学院に入学したといわれている。趣味は「それどこでみつけてきたの？」と言われること、最近は暑いのでコーヒーも嗜んでいる。好きなボードゲームはパンデミック、サイズなどの重ゲー。そのうち幹部を引っ張って大会に出たいと考えている。</big>
           </div>
           </div>
           
