--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、イギリス生まれ。ものづくりと収集を趣味にしており、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。今行きたい場所はお城と滝と海。自室の扉に貼られている紙の枚数は8枚（半紙2枚、普通紙6枚）。</big>
+            2000年、イギリス生まれ。ものづくりと収集を趣味にしており、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。今行きたい場所はお城と滝と海。自室の扉に紙が8枚貼ってある。</big>
           </div>
           </div>
 <div class="content-left3">
@@ -106,7 +106,7 @@
              <a href="https://twitter.com/bodogebu_"><small>@bodogebu_</small></a>
             
             <br/>
-            1996年、神奈川県生まれ。幹部ではない。珍しく1と2と3の面が二面ずつあるサイコロのため桃鉄の面接には落ちたが、CoCでは期待の新人と噂された。2020年、神話生物が怖いという理由でCoCダイスの座を辞職。職を探していたところボドゲ部のマスコットの求人が出ていたため応募してみたら受かった。時給は悪いが、やりがいのある仕事だと感じている。幹部ではない。
+            1996年、神奈川県生まれ。幹部ではない。珍しく1と2と3の面が二面ずつあるサイコロのため桃鉄の面接には落ちたが、CoCでは期待の新人と噂された。2020年、神話生物が怖いという理由でCoCダイスを辞職。職を探していたところボドゲ部のマスコットの求人が出ていたため応募してみたら受かった。時給は悪いが、やりがいのある仕事だと感じている。幹部ではない。
 </big>
           </div>
           </div>
