--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、イギリス生まれ。ものづくりと収集を趣味にしており、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。今行きたい場所はお城と滝と海。自室の扉に紙が8枚貼ってある。</big>
+            2000年、イギリス生まれ。ものづくりと収集を趣味にしており、今はドミニオンのカード名さがしにハマっている。架空の人物のサインを考えるのが好きで代表のサインを勝手に作ってよく書く。好きな猫は野良猫。</big>
           </div>
           </div>
 <div class="content-left3">
