--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、神奈川県に生まれる。ものづくり、収集、読書、短歌、ゲームなど文化全般が好きで、今はドミニオンのカード名さがしにハマっている。代表のサインを勝手に自作してよく書く。フォントマニアであり、自身の綺麗な筆跡に飽きて逆に汚い字を練習しているといった変態的な一面がある。最近古文で行動履歴をつけようとして挫折した。</big>
+            2000年、神奈川県に生まれる。ものづくり、収集、読書、短歌、絵など文化全般が好きで、今はドミニオンのカード名さがしにハマっている。代表のサインを勝手に自作してよく書く。フォントマニアであり、他人の筆跡をみているだけで時間を潰せたり、自身の綺麗な筆跡に飽きて逆に汚い字を練習しているといった変態的な一面を持つ。最近古文で行動履歴をつけようとして挫折した。</big>
           </div>
           </div>
 <div class="content-left3">
