--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、神奈川県生まれ。ものづくり、収集、読書、短歌など文化全般が好きで、今はドミニオンのカード名あつめを行っている。フォントマニアであり、自分の字の綺麗さに飽きてしまい逆に汚い字を練習しているといった変態的な一面がある。最近階段から転げ落ちて尻を強打した。</big>
+            2000年、神奈川県生まれ。ものづくり、収集、読書、短歌など文化全般が好きで、今はドミニオンのカード名あつめを行っている。フォントマニアであり、自身の字の綺麗さに飽きてしまい逆に汚い字を練習しているといった変態的な一面がある。最近階段から転げ落ちて尻を強打した。</big>
           </div>
           </div>
 <div class="content-left3">
