--- a/aboutus.html
+++ b/aboutus.html
@@ -76,7 +76,7 @@
                <a href="https://twitter.com/WwMoz"><small>@WwMoz</small></a>
             
             <br/>
-            2000年、神奈川県生まれ。ものづくり、収集、読書、短歌など文化全般が好きで、今はドミニオンのカード名あつめを行っている。フォントマニアであり、自身の字の綺麗さに飽きてしまい逆に汚い字を練習するといった変態的な一面がある。副代表は必ずTwitterのトレンド地域をオマーンに設定するため、部の共用アカウントで日本語のトレンドが見れないという弊害が起きている。</big>
+            2000年、神奈川県生まれ。ものづくり、収集、読書、短歌など文化全般が好きで、今はドミニオンのカード名あつめを行っている。フォントマニアであり、自身の字の綺麗さに飽きてしまい逆に汚い字を練習するといった変態的な一面がある。必ずTwitterのトレンド地域をオマーンに設定するので、部の共用アカウントでアラビア語のトレンドしか見れないという弊害が起きている。</big>
           </div>
           </div>
 <div class="content-left3">
@@ -110,6 +110,7 @@
 </big>
           </div>
           </div>
+          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
 
 </body>
 </html>
