--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
         </br>
 
 
-        <small>作成日：21.5.22</br>
+        作成日：21.5.22</br>
         最終更新：21.6.13
         </br></br></br>
-        HP作成時の参考文献</br>
+        <small>HP作成時の参考文献</br>
         ・<a href="http://abehiroshi.la.coocan.jp/" >阿部寛のホームページ</a></br>
         ・<a href="https://qiita.com/Michinosuke/items/ff696189ecd518da3d3a" >阿部寛と学ぶHTMLチュートリアル</a></br>
         ・<a href="https://homepagenopro.com/html/css_popup.html" >Cssだけで実装!画像をクリックしてポップアップ表示する方法</a></br></small>
