--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
     <!-- TODO: Please edit here -->
     <div class="contents-wrapper">
         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-      <div class="heading"><i>　　このwebページについて　　</i></div>
+      <div class="heading"><i>　　このホームページについて　　</i></div>
       <div class="contents-wrapper-inner">
     <div class="nav-wrapper">
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
-        このwebページはボードゲーム愛好会の部員によって運営されています。</br>
+        このホームページはボードゲーム愛好会の部員によって運営されています。</br>
         何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br>
         </br></br></br><small>
         HP作成日：21.5.22</br>
