--- a/home.html
+++ b/home.html
@@ -97,16 +97,16 @@
           <div class="news-heading">★★★　最新情報　★★★</div>
           <div class="news-list">
             <div class="news-list-content">
-                <div class="news-list-title">■オンライン説明会を追加開催します（21.5.10）</div>
+                <div class="news-list-title">■オンライン活動期間の延長（21.5.30）</div>
                 <div class="news-list-description">
-                    5月22日(土)14:00~、zoomを使用して開催します。必ず下記参加フォームから参加申し込みをしてください。<a href="https://forms.office.com/r/PgyEPaCVn9"><br/><br/><i>→参加申し込みはこちらから</i></a>
+                    緊急事態宣言の延長に伴い、学校からの課外活動制限も延長されたため、6月20日までオンライン活動となります。制限が解除され次第、対面活動に戻る予定です。当面はDiscordで活動します。
                 </div>
             <hr width="400px">
             </div>
             <div class="news-list-content">
-                <div class="news-list-title">■オンライン説明会が両日とも終了いたしました（21.4.10）</div>
+                <div class="news-list-title">■オンライン説明会は全日程終了いたしました（21.5.22）</div>
                 <div class="news-list-description">
-                    2回合わせて90名超の方にご参加いただきました。ありがとうございました。対面の活動は12日から始まります。                  
+                    3回合わせて120名超の方にご参加いただきました。ありがとうございました。対面活動に参加されたことがある方はオンライン上での入部もできますので、お気軽にお問合せください。                  
                 </div>
 
             </div>
