--- a/aboutus.html
+++ b/aboutus.html
@@ -106,7 +106,7 @@
              <a href="https://twitter.com/bodogebu_"><small>@bodogebu_</small></a>
             
             <br/>
-            1996年、神奈川県生まれ。幹部ではない。珍しく1と2と3の面が二面ずつあるサイコロのため桃鉄の面接には落ちたが、CoCでは期待の新人と噂された。2020年、神話生物が怖いという理由でCoCダイスを辞職。職を探していたところボドゲ部のマスコットの求人が出ていたため応募してみたら受かった。時給は悪いが、やりがいのある仕事だと感じている。幹部ではない。
+            1996年、神奈川県生まれ。幹部ではない。1と2と3の面が二面ずつある珍しいサイコロのため桃鉄の面接には落ちたが、CoCでは期待の新人と噂された。2020年、神話生物が怖いという理由でCoCダイスを辞職。職を探していたところボドゲ部のマスコットの求人が出ていたので応募してみたら受かった。時給は悪いが、やりがいのある仕事だと感じている。幹部ではない。
 </big>
           </div>
           </div>
