--- a/home.html
+++ b/home.html
@@ -117,7 +117,7 @@
 
             </br></br>
             <div class="news-heading">
-            <font color="white"><big><b><i>今月の標語</br>「民兵は嫌だ…民兵は嫌だ…」</i></b></big></font></div>      
+            <font color="white"><big><b><i>今月の標語</br>「民兵は嫌だ…民兵は嫌だ…」</i></b></big></font></div> </div>     
 
           </div>
         </div>
