--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
          <center><b><small><span style="color:white">あなたは　<a href="https://www.free-counter.jp/"><img src="https://www.f-counter.net/j/46/1622358033/" alt="アクセスカウンター"></a>
         人目の訪問者です。</br>
              
-             </span></small></b></center></br>
+             </span></small></b></center>
         
       <div class="contents-wrapper-inner">
         <div class="content-left">
@@ -113,11 +113,9 @@
             <div class="news-heading">★★★　Twitter　★★★</div>
             <a class="twitter-timeline"  href="https://twitter.com/bodogebu_?ref_src=twsrc%5Etfw"data-chrome="noscrollbar"	data-height="400px">Tweets by bodogebu_</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </div>
-
             </br></br>
             <div class="news-heading">
-            <font color="white"><big><b><i>今月の標語</br>「民兵は嫌だ…民兵は嫌だ…」</i></b></big></font></div> </div>     
+            <font color="white"><big><b><i>今月の標語</br>「民兵は嫌だ……民兵は嫌だ……」</i></b></big></font></div> </div>     
 
           </div>
         </div>
