--- a/home.html
+++ b/home.html
@@ -115,7 +115,7 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
             <div class="news-heading">
-            <font color="white"><big><b><i>今月の標語</br>「民兵は嫌だ……民兵は嫌だ……」</i></b></big></font></br></br></div> </div>     
+            <font color="white"><big><b><i>今月の標語</br></br>「民兵は嫌だ……民兵は嫌だ……」</i></b></big></font></br></br></br></br></br></div> </div>     
 
           </div>
         </div>
