--- a/home.html
+++ b/home.html
@@ -56,9 +56,9 @@
 <body>
     <div class="nav-wrapper">
       <div class="nav">
-        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" >🚀活動アーカイブ</a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" >🛸幹部紹介</a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" >🌐このHPについて</a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" ><span style=background-color:#b7b7c3;>🚀活動アーカイブ</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" ><span style=background-color:#b7b7c3;>🪐幹部紹介</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#b7b7c3;>🌐このHPについて</span></a></div>
       </div>
     </div>
     <div class="contents-wrapper">
@@ -115,7 +115,7 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
             <div class="news-heading">
-            <font color="white"><big><b><i>今月の標語</br></br>「民兵は嫌だ……民兵は嫌だ……」</i></b></big></font></br></br></br></br></br></div> </div>     
+            <font color="white"><big><i>今月の標語</br></br>「民兵で蓋をする」</i></big></font></br></br></br></br></br></div> </div>     
 
           </div>
         </div>
