--- a/home.html
+++ b/home.html
@@ -56,9 +56,9 @@
 <body>
     <div class="nav-wrapper">
       <div class="nav">
-        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" ><span style=background-color:#b7b7c3;>🚀活動アーカイブ</span></a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" ><span style=background-color:#b7b7c3;>🪐幹部紹介</span></a></div>
-        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#b7b7c3;>🌐このHPについて</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="archive.html" ><span style=background-color:#D0D0DD;>🚀活動アーカイブ</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="aboutus.html" ><span style=background-color:#D0D0DD;>🪐幹部紹介</span></a></div>
+        <div class="nav-content"><div class="nav-icon"></div><a href="about.html" ><span style=background-color:#D0D0DD;>🌐このHPについて</span></a></div>
       </div>
     </div>
     <div class="contents-wrapper">
