--- a/home.html
+++ b/home.html
@@ -73,7 +73,7 @@
           <div class="face-photo"><img src="IMG_6074.jpg" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
             青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
-            <br/><br/>
+            <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
             <b>活動場所</b>　青山キャンパス17号館<br/>
             <b>活動日時</b>　週2回、月曜と金曜の5限後から<br/>
             <b>部員数</b>　2020年度 22名<br/>
@@ -114,7 +114,7 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
             <div class="news-heading">
-            <font color="white"><big><i>今月の標語</br></br>「民兵で蓋をする」</i></big></font></br></br></br></br></br></div> </div>     
+            <font color="#F5F5F5"><big><i>今月の標語</br></br>「民兵で蓋をする」</i></big></font></br></br></br></br></br></div> </div>     
 
           </div>
         </div>
