--- a/archive.html
+++ b/archive.html
@@ -71,7 +71,7 @@
     <div class="popup-content1">
        <!-- ポップアップの中身 -->
        <b>2021年4月16日　新歓2回目、キャット&チョコレート祭り</b><br>
-       いろんな種類のキャッチョコで戦いました！優勝した方に「光る海の仲間たち」（ドンキホーテで購入）を贈呈しました。
+       いろんな種類のキャッチョコで戦いました！優勝した方に「光る海の仲間たち」（ドンキホーテで購入）を贈呈しました。</br>
       <img src="https://pbs.twimg.com/media/EzGfJF5UcAUXLS3?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img">
       <img src="https://pbs.twimg.com/media/EzGfJF4VoAAibYq?format=jpg&name=medium" alt="キャッチョコ" width="514" height="386"class="layer-img">
        <img src="https://pbs.twimg.com/media/EzGfJF2VgAMOdJq?format=jpg&name=900x900" alt="キャッチョコ" width="514" height="386"class="layer-img">
@@ -89,7 +89,7 @@
     <div class="popup-content">
        <!-- ポップアップの中身 -->
        <b>2021年4月9日、10日　新歓オンライン説明会開催</b><br>
-       両日合わせて100名程度の方にご参加いただきました。ありがとうございました！
+       両日合わせて100名程度の方にご参加いただきました。ありがとうございました！</br>
       <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="514" height="386"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
