--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <div class="nav">
         <div class="nav-content"><div class="nav-icon"></div>
         このホームページはボードゲーム愛好会の部員によって運営されています。</br>
-        何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br></br><span style="color:#B0B0BD">バイキングお皿はずっと一つだけ使い続けるおじさん三田さん（副代表が詠んだ短歌）</span></br></br><small>
+        何かあればTwitterのDMまたは質問箱（匿名メッセージフォーム）からお問い合わせください。</br></br><span style="color:#B0B0BD">Mississippi←ミシシッピのスペルにはsが2×2個、ｐが2個あり、それらがiで挟まれています。</span></br></br><small>
         HP作成日：21.5.22</br>
         最終更新：21.6.14
         </small>
