--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
         <div class="content-left">
           <div class="face-photo"><img src="IMG_6074.jpg" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
-            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
+            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダー<span style="color:#F5F5F5">ミス</span>テリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
             <b>活動場所</b>　青山キャンパス17号館<br/>
             <b>活動日時</b>　週2回、月曜と金曜の5限後から<br/>
