--- a/home.html
+++ b/home.html
@@ -95,16 +95,16 @@
           <div class="news-list">
               
               <div class="news-list-content">
-                <div class="news-list-title">■オンライン入部〆切（21.5.31）</div>
+                <div class="news-list-title">■対面活動について（21.6.18）←New!</div>
                 <div class="news-list-description">
-                    オンライン上のみでの入部受付を5月いっぱいで終了しました。今後入部希望の方は、対面活動に来ていただいてから入部していただく形になります。                  
+                    オンライン活動を続けて参りましたが、本日、大学から7月1日より対面での課外活動を認めるとの通達がありました。つきましては、7月2日（金）から対面活動を再開したいと考えています。6月中は全てオンライン活動になりますので、よろしくお願いします。                 
                 </div>
             <hr width="400px">
               
             <div class="news-list-content">
-                <div class="news-list-title">■オンライン活動期間の延長（21.5.30）</div>
+                <div class="news-list-title">■オンライン入部〆切（21.5.31）</div>
                 <div class="news-list-description">
-                    6月20日までオンライン活動となります。制限が解除され次第、対面活動に戻る予定です。当面はDiscordで活動します。
+                    オンライン上のみでの入部受付を5月いっぱいで終了しました。今後入部希望の方は、対面活動に来ていただいてから入部していただく形になります。
                 </div>
             <hr width="400px">
             </div>
