--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
         <div class="content-left">
           <div class="face-photo"><img src="IMG_6074.jpg" alt="ロゴ" width="300" height="300"></div>
           <div class="profile">
-            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダー<span style="color:#F5F5F5">ミス</span>テリー、TVゲ<span style="color:#F5F5F5">ームな</span>ど色々なゲームを遊んで<span style="color:#F5F5F5">いま</span>す。
+            青山学院大学の公認サークルです。ボードゲームを中心にTRPG、人狼、カードゲーム、マーダーミステリー、TVゲームなど色々なゲームを遊んでいます。
             <br/><span style="color:#F5F5F5">顧問　横山徹先生</span><br/>
             <b>活動場所</b>　青山キャンパス17号館<br/>
             <b>活動日時</b>　週2回、月曜と金曜の5限後から<br/>
@@ -85,7 +85,7 @@
             　<a href="https://twitter.com/bodogebu_"><img src="Twittericon.jpg" alt="ツイッター" width="90" height="90"></a>
             <a href="https://peing.net/ja/bodogebu_"><img src="Peing.jpg" alt="質問箱" width="90" height="90"></a>
              <a href="https://www.instagram.com/bodogebu_/"><img src="InstagramIcon.jpg" alt="インスタ" width="90" height="90"></a>
-              </div></br>　<img src="hakushi.png" alt="ふきだし" width="290" height="100"></br><span style="color:black">　　　総務は耳をすませばが好き　</span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
+              </div></br>　<img src="hukidashi.png" alt="ふきだし" width="290" height="100"></br><span style="color:black">　　　総務は耳をすませばが好き　</span><img src="d_nice.png" alt="ゆるキャラ" width="120" height="120">
           </div>
           <div class="mail">
         
