--- a/home.html
+++ b/home.html
@@ -122,7 +122,11 @@
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </br></br>
             <div class="news-heading">
-            <font color="#F5F5F5"><big><i>今月の標語</br></br>「民兵で蓋をする」</i></big></font></br></br></br></br></br></div> </div>     
+            <big><b><i><a href="slogan.html" style="text-decoration:none;"><font color="white">今月の標語</br>「民兵は嫌だ…民兵は嫌だ…」</font></a></i></b></big>
+            </br></br>
+            </div>
+        
+            </div>  
 
           </div>
         </div>
