--- a/slogan.html
+++ b/slogan.html
@@ -13,10 +13,10 @@
         //
     </script>
       <!-- ページのタイトル -->
-  <title>2021年度 ボドゲ部幹部紹介</title>
+  <title>ボドゲ部の月替わり標語アーカイブ</title>
 
   <!-- ページの説明 -->
-  <meta name="description" content="ボードゲーム愛好会ボドゲ部の幹部紹介ページです。" />
+  <meta name="description" content="月替わりの標語アーカイブです。" />
 
   <!-- 文字エンコードの指定 -->
   <meta charset="utf-8" />
@@ -25,7 +25,7 @@
   <meta name="viewport" content="target-densitydpi=device-dpi, width=950, maximum-scale=1.0, user-scalable=yes">
 
   <!-- ホーム画面に追加したときのタイトル -->
-  <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部 幹部紹介">
+  <meta name="apple-mobile-web-app-title" content="ボードゲーム愛好会ボドゲ部 標語一覧">
 
   <!-- ホーム画面に追加したときの画像 -->
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
@@ -47,7 +47,7 @@
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
          <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
-      <div class="heading"><i>　　2021年度 幹部紹介　　</i></div>
+      <div class="heading"><i>　　過去の標語一覧　　</i></div>
       <div class="contents-wrapper-inner">
           
  <div class="content-left">
