--- a/slogan.html
+++ b/slogan.html
@@ -56,7 +56,9 @@
 </div>
 
          <div class="profile">
-            <big><b>6月　「民兵に蓋をする」　　　　　</b></big>
+            <div class="tooltip1">
+                <p><big><b>6月　「民兵に蓋をする」　　　　　</b></big></p>
+            <div class="description1">民平に蓋をする、とは </div>
           </div>
 </div></br>
 
