--- a/slogan.html
+++ b/slogan.html
@@ -59,6 +59,9 @@
             <div class="tooltip1">
                 <p><big><b>6月　「民兵に蓋をする」　　　　　</b></big></p>
             <div class="description1">民平に蓋をする、とは </div>
+            
+</div>
+            
           </div>
 </div></br>
 
