--- a/slogan.html
+++ b/slogan.html
@@ -57,8 +57,8 @@
 
          <div class="profile">
             <div class="tooltip1">
-                <p><big><b>6月　「民兵に蓋をする」　　　　　</b></big></p>
-            <div class="description1">民平に蓋をする、とは </div>
+                <p><big><b>6月　「民兵で蓋をする」　　　　　</b></big></p>
+            <div class="description1">民兵で蓋をするとは！祝祭から入って魔女や議事堂などで手札を増やし最後のアクションで民兵を使用することで周りの人の動きを抑制しながら自分だけいい動きをすることである！（6月、代表） </div>
             
 </div>
             
