--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
-    <link rel="stylesheet" href="design.css">
+    <link rel="stylesheet" href="archive.css">
     <script src="components/loader.js"></script>
     <script>
         //
@@ -36,7 +36,7 @@
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
 
-  <link rel="stylesheet" href="./design.css" /> <!-- CSSファイルを読み込む -->
+  <link rel="stylesheet" href="./archive.css" /> <!-- CSSファイルを読み込む -->
 </head>
 <body>
     <!-- TODO: Please edit here -->
@@ -55,11 +55,14 @@
     <label for="popup-on2" class="icon-close2">×</label>
     <div class="popup-content2">
        <!-- ポップアップの中身 -->
-       <b>2021年5月22日　オンライン説明会を追加開催</b><br>
-       対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。</br>
+        </br>
+       <b>2021年5月22日　オンライン説明会を追加開催</b></br>
+      </br>
+       対面活動が制限されてしまったため、オンライン上で入部を希望される方のためにオンライン説明会を追加で開催しました。ご参加くださった方々、ありがとうございました。</br></br>
       <img src="https://pbs.twimg.com/media/E1AZ9A2VgAM57fS?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img2">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
+          </br>
     <label for="popup-on2"><div class="btn-close2">閉じる</div></label>
   </div>
 
@@ -70,13 +73,17 @@
     <label for="popup-on1" class="icon-close1">×</label>
     <div class="popup-content1">
        <!-- ポップアップの中身 -->
+        </br>
        <b>2021年4月16日　新歓2回目、キャット&チョコレート祭り</b><br>
+      </br>
        いろんな種類のキャッチョコで戦いました！優勝した方に「光る海の仲間たち」（ドンキホーテで購入）を贈呈しました。</br>
+    </br>
       <img src="https://pbs.twimg.com/media/EzGfJF5UcAUXLS3?format=jpg&name=large" alt="キャッチョコ" width="514" height="386"class="layer-img">
       <img src="https://pbs.twimg.com/media/EzGfJF4VoAAibYq?format=jpg&name=medium" alt="キャッチョコ" width="514" height="386"class="layer-img">
        <img src="https://pbs.twimg.com/media/EzGfJF2VgAMOdJq?format=jpg&name=900x900" alt="キャッチョコ" width="514" height="386"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
+    </br>
     <label for="popup-on1"><div class="btn-close1">閉じる</div></label>
   </div>    
    
@@ -88,11 +95,15 @@
     <label for="popup-on" class="icon-close">×</label>
     <div class="popup-content">
        <!-- ポップアップの中身 -->
+        </br>
        <b>2021年4月9日、10日　新歓オンライン説明会開催</b><br>
+      </br>
        両日合わせて100名程度の方にご参加いただきました。ありがとうございました！</br>
+    </br>
       <img src="https://pbs.twimg.com/media/EyNWAPyVcAAhr2X?format=jpg&name=large" alt="" width="514" height="386"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div>
+</br>
     <label for="popup-on"><div class="btn-close">閉じる</div></label>
   </div>
 
