--- a/archive.html
+++ b/archive.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'">
     <link rel="stylesheet" href="components/loader.css">
-    <link rel="stylesheet" href="css/otameshi.css">
+    <link rel="stylesheet" href="css/archive.css">
     <script src="components/loader.js"></script>
     <script>
         //
@@ -36,7 +36,7 @@
   <!-- 電話番号などをリンクに変換されるのを防ぐ -->
   <meta name="format-detection" content="email=no,telephone=no,address=no" />
 
-  <link rel="stylesheet" href="./otameshi.css" /> <!-- CSSファイルを読み込む -->
+  <link rel="stylesheet" href="./archive.css" /> <!-- CSSファイルを読み込む -->
 
   
 </head>
