--- a/archive.html
+++ b/archive.html
@@ -43,7 +43,7 @@
 <body>
     <!-- TODO: Please edit here -->
      <div class="contents-wrapper">
-         <a href="index.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
+         <a href="home.html" ><font color="white"><b>◀︎ボドゲ部Home</b></font></a>
       <div class="heading"><i>　　活動アーカイブ　　</i></div>
       <div class="contents-wrapper-inner">
           
