--- a/archive.html
+++ b/archive.html
@@ -66,11 +66,11 @@
        <img src="https://pbs.twimg.com/media/E4UGUztVgAgv-ad?format=jpg&name=large" alt="フライヤー" width="100%" height="100%"class="layer-img4"></br></br></br>
 
        <b>↓大会ルール</b></br>
-      <img src="https://media.discordapp.net/attachments/835703913042018338/857953809073176596/image0.png?width=1500&height=1043" alt="大会ルール" width="45%" height="55%"class="layer-img4"></br></br></br>
+      <img src="https://media.discordapp.net/attachments/835703913042018338/857953809073176596/image0.png?width=1500&height=1043" alt="大会ルール" width="500px" height="300px"class="layer-img4"></br></br></br>
        <b>↓決勝戦サプライ</b></br>
-      <img src="https://media.discordapp.net/attachments/840252564242956298/858613036252266506/6F719532-A756-414A-8BED-3E86D2106366_4_5005_c.jpeg" alt="ドミニオン大会" width="45%" height="30%"class="layer-img4"></br></br></br>
+      <img src="https://media.discordapp.net/attachments/840252564242956298/858613036252266506/6F719532-A756-414A-8BED-3E86D2106366_4_5005_c.jpeg" alt="ドミニオン大会" width="400px" height="200px"class="layer-img4"></br></br></br>
       <b>↓優勝者ロール</b></br>
-      <img src="https://media.discordapp.net/attachments/840252564242956298/858613065221668864/21403D36-2DC1-49C0-9799-4728803AC0D6_4_5005_c.jpeg" alt="優勝者ロール" width="45%" height="30%"class="layer-img4"></br></br></br>
+      <img src="https://media.discordapp.net/attachments/840252564242956298/858613065221668864/21403D36-2DC1-49C0-9799-4728803AC0D6_4_5005_c.jpeg" alt="優勝者ロール" width="400px" height="200px"class="layer-img4"></br></br></br>
 
 
     </br>
@@ -133,9 +133,9 @@
        
        いろんな種類のキャッチョコで戦いました！優勝した方に「光る海の仲間たち」（ドンキホーテで購入）を贈呈しました。</br></br>
        2021年4月16日　</br></br>
-      <img src="https://pbs.twimg.com/media/EzGfJF5UcAUXLS3?format=jpg&name=large" alt="キャッチョコ" width="45%" height="60%"class="layer-img">
-      <img src="https://pbs.twimg.com/media/EzGfJF4VoAAibYq?format=jpg&name=medium" alt="キャッチョコ" width="45%" height="60%"class="layer-img">
-       <img src="https://pbs.twimg.com/media/EzGfJF2VgAMOdJq?format=jpg&name=900x900" alt="キャッチョコ" width="45%" height="60%"class="layer-img">
+      <img src="https://pbs.twimg.com/media/EzGfJF5UcAUXLS3?format=jpg&name=large" alt="キャッチョコ" width="500px" height="300px"class="layer-img">
+      <img src="https://pbs.twimg.com/media/EzGfJF4VoAAibYq?format=jpg&name=medium" alt="キャッチョコ" width="500px" height="300px"class="layer-img">
+       <img src="https://pbs.twimg.com/media/EzGfJF2VgAMOdJq?format=jpg&name=900x900" alt="キャッチョコ" width="500px" height="300px"class="layer-img">
         <!-- ./ポップアップの中身　ここまで -->
     </div></br>
     </br>
